--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
         <nav class="head-navigation">
 
-            <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+            <a href="./index.html" class="logo-link">WEB<span class="logo-title">STUDIO</span></a>
+
+        
    
             <ul class="menu">
         
