--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <li class="job-title-page">
 
-                    <img class="team-card" src="./images/our team/mark-guerrero.jpg" alt="mark guerrero" width="264" height="260">
+                    <img class="team-card" src="./images/our-team/mark-guerrero.jpg" alt="mark guerrero" width="264" height="260">
 
                     <h3 class="team-names">Mark Guerrero</h3>
 
@@ -193,11 +193,10 @@
 
                     <img src="./images/our portfolio/banking-app.jpg" alt="banking-app">
 
-
-
                     <h3 class="presents-cards-text">Banking App</h3>
 
                     <p class="secondary-text">App</p>
+                    
 
 
 
