--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 
         <nav class="head-navigation">
 
-            <a href="./index.html" class="logo-link">WEB<span class="logo-title">STUDIO</span></a>
+            <a href="./index.html" class="logo-link">WEB<span class="logo-title">Studio</span></a>
 
-        
    
             <ul class="menu">
         
                <li class="menu-item">
 
-                  <a class="menu-link" href="./index.html">Studio</a>
+                  <a href="./index.html" class="menu-link">Studio</a>
 
                </li>
 
