--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                <li class="menu-item">
 
-                 <a class="menu-link" href="./index.html">Portfolio</a>
+                 <a href="./index.html" class="menu-link">Portfolio</a>
                 
 
                </li>
