--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <ul class="team-cards">
 
-                <li class="job-title-page">
+                <li class="job-title-top">
 
                     <img class="team-card" src="./images/our-team/mark-guerrero.jpg" alt="mark guerrero" width="264" height="260">
 
