--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
      <footer class="last-page">
 
-        <a class="last-page-link" href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo-link">WEB<span class="logo-title">Studio</span></a>
 
         <p class="last-page-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
