--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
 
                 
-                    <h3 class="presents-cards-text">Screen Illustrations Design</h3>
+                    <h3 class="presents-cards-text">Screen Illustrations</h3>
                 
                     <p class="secondary-text">Design</p>
 
@@ -277,6 +277,7 @@
 
 
      <footer class="last-page">
+
 
         <a href="./index.html" class="logo-link">WEB<span class="logo-title">Studio</span></a>
 
