--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         
                <li class="menu-item">
 
-                <a href="./index.html" class="menu-link">Studio</a>
+                <a href="Studio.html" class="menu-link">Studio</a>
 
                </li>
 
                <li class="menu-item">
 
-                <a href="./index.html" class="menu-link">Portfolio</a>
+                <a href="./Portfolio.html" class="menu-link">Portfolio</a>
                 
 
                </li>
