--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
      <footer class="last-page">
 
 
-        <a href="./index.html" class="logo-link">WEB<span class="logo-title">Studio</span></a>
+        <a href="./index.html" class="logo-link">WEB<span class="logo-title-fin">Studio</span></a>
 
         <p class="last-page-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
