--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
         
                <li class="menu-item">
 
-                <a href="Studio.html" class="menu-link">Studio</a>
+                <a href="#Studio" class="menu-link">Studio</a>
 
                </li>
 
                <li class="menu-item">
 
-                <a href="./Portfolio.html" class="menu-link">Portfolio</a>
+                <a href="#Portfolio" class="menu-link">Portfolio</a>
                 
 
                </li>
 
                <li class="menu-item">
 
-                <a class="menu-link" href="./index.html">Contacts</a>
+                <a class="menu-link" href="#Contacts">Contacts</a>
 
                </li>
 
