--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         
                <li class="menu-item">
 
-                <a href="#Studio" class="menu-link">Studio</a>
+                <a class="menu-link" href="#Studio" >Studio</a>
 
                </li>
 
                <li class="menu-item">
 
-                <a href="#Portfolio" class="menu-link">Portfolio</a>
+                <a class="menu-link" href="#Portfolio">Portfolio</a>
                 
 
                </li>
