--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 
         <nav class="head-navigation">
 
-            <a href="./index.html" class="logo-link">WEB<span class="logo-title">Studio</span></a>
+
+            <a href="./index.html" id="home" class="logo-link">WEB<span class="logo-title">Studio</span></a>
 
    
             <ul class="menu">
         
                <li class="menu-item">
 
-                <a class="menu-link" href="#Studio" >Studio</a>
+                <a class="menu-link" href="#home" >Studio</a>
 
                </li>
 
@@ -40,7 +41,7 @@
 
                <li class="menu-item">
 
-                <a class="menu-link" href="#Contacts" >Contacts</a>
+                <a class="menu-link" href="#address" >Contacts</a>
 
                </li>
 
@@ -51,7 +52,7 @@
 
 
    
-    <address class="contact">
+    <address class="contact" id="address">
 
         <ul class="menu-contact">
 
@@ -184,7 +185,7 @@
         </section>
         
 
-        <section class="examples">
+        <section class="examples" id="Portfolio">
 
             <h2 class="top-text">Our Portfolio</h2>
 
