--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
         
                <li class="menu-item">
 
-                <a class="menu-link" href="#home" >Studio</a>
+                <a class="menu-link" href="./index.html">Studio</a>
 
                </li>
 
                <li class="menu-item">
 
-                <a class="menu-link" href="#Portfolio" >Portfolio</a>
+                <a class="menu-link" href="#Portfolio">Portfolio</a>
                 
 
                </li>
 
                <li class="menu-item">
 
-                <a class="menu-link" href="#address" >Contacts</a>
+                <a class="menu-link" href="#address">Contacts</a>
 
                </li>
 
