--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                <li class="menu-item">
 
-                <a class="menu-link" href="address">Contacts</a>
+                <a class="menu-link" href="#address">Contacts</a>
 
                </li>
 
