--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
 
                <li class="menu-item">
 
-                <a href="#Portfolio" class="menu-link" >Portfolio</a>
+                <a href="#Portfolio" class="menu-link" 
+                >Portfolio</a>
                 
                </li>
 
 
                <li class="menu-item">
 
-                <a class="menu-link" href="#address">Contacts</a>
+                <a class="menu-link" href="#address"
+                >Contacts</a>
 
                </li>
 
