--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                <li class="menu-item">
 
-                <a href="" class="menu-link" >Portfolio</a>
+                <a href="#Portfolio" class="menu-link" >Portfolio</a>
                 
                </li>
 
