--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         
                <li class="menu-item">
 
-                <a class="menu-link" href="./index.html">Studio</a>
+                <a class="menu-link" href="./index.html">Studio</a> 
+                <a href=""></a>
 
                </li>
 
