--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
                   </li>
 
-                 <li class="menu-contact-item">
+                 <li class="menu-contact-item second">
 
-                      <a class="menu-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                      <a class="menu-contact-link " href="tel:+110001111111">+11 (000) 111-11-11</a>
 
                  </li>
            
