--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <section class="advantages">
             
-            <div class="advantages container">
+            <div class="advantages-container">
 
                 <h2 class="visually-hidden">Peculiarities</h2>
                 
