--- a/index.html
+++ b/index.html
@@ -333,12 +333,15 @@
 
      <footer class="last-page">
 
+        <div class="container last-page-container">
 
-        <a href="./index.html" class="logo-link">WEB<span class="logo-title-fin">Studio</span></a>
+            <a href="./index.html" class="logo-link">WEB<span class="logo-title-fin">Studio</span></a>
+            
+            <p class="last-page-text">Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.</p>
 
-        <p class="last-page-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
-
+        </div>
 
      </footer>
 
